fix layout issues, style cards

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 }
 body {
     font-family: 'Roboto', sans-serif;
-    min-height: 100vh;
 }
 a {
     text-decoration: none;
@@ -23,8 +22,8 @@ img {
 
 .container {
     display: grid;
-    grid-template-columns: max(210px, 15%) minmax(400px, 3fr);
-    grid-template-rows: 15% 85%;
+    grid-template-columns: max(230px, 20%) minmax(400px, 3fr);
+    grid-template-rows: 1fr 20fr;
 }
 
 /* Header */
@@ -81,12 +80,13 @@ input[type="search"]:focus {
     grid-column: 1 / 2;
 }
 h1 {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     margin: 0;
 }
 .buttons {
     grid-column: 2 / 3;
     display: flex;
+    justify-self: end;
     align-items: flex-end;
     justify-content: flex-end;
     flex-wrap: wrap;
@@ -97,9 +97,10 @@ button {
     border: 0;
     background-color: var(--clr-main);
     color: #FFF;
-    padding: .5rem;
+    padding: .5rem 2rem;
     border-radius: 1rem;
-    flex: 1;
+    flex-grow: 1;
+    flex-shrink: 0;
     min-width: 80px;
     transition: all .1s;
 }
@@ -116,6 +117,7 @@ button:hover {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     padding: 1.5rem;
+    min-height: 100vh;
     color: #FFF;
     background-color: var(--clr-main);
 }
@@ -149,6 +151,46 @@ button:hover {
     grid-row: 2 / 3;;
     background-color: var(--clr-neutral);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-template-rows: repeat(auto, 1fr);
+    grid-template-columns: minmax(400px, 4fr) minmax(250px, 1fr);
+    gap: 1rem;
+    padding: 1rem;
 }
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
+}
+.project-card {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   padding: 2rem;
+   background-color: #FFF;
+   font-weight: 300;
+   border-left: .5rem solid var(--clr-secondary);
+   border-radius: 8px;
+}
+.card-icons {
+    align-self: flex-end;
+    display: flex;
+    gap: 1rem;
+    margin-top: 1rem;
+    font-size: 1.125rem;
+}
+h2 {
+    font-size: 1.25rem;
+    font-weight: 400;
+}
+h3 {
+    font-size: 1rem;
+    margin: .5rem 0;
+}
+
+/* Announcements / Trending */
+
+.announcements {
+    font-size: .85rem;
+}
+
+/* Media Queries  */
+
